LIST OF CHANGES
---------------

release 60.2.0
 - When generating lane taglist files truncate and pad i7 and i5 tags independently
 - Support no_auto, no_auto_archive and no_auto_analysis tags for daemons
 - npg_run_is_deletable - delete runs with status 'run cancelled' and
   'data discarded' after 14 days of the status date irrespectively of
   what study the samples belong to. The samplesheet is not available for
   these runs. Prior to this change the code was accessing an external
   source of LIMS data (XML LIMS API) to get information about the study.
   This change also helps to go around very long deletion times which
   are set for some studies. 
 - Create class/package level methods in npg_pipeline::product::release::irods
   to allow for reusing the logic about run and product iRODS collections
   paths in the code outside of this package. 
 - Stop loading data to the old warehouse. Remove
   the update_ml_warehouse_post_qc_complete function from the archival
   pipeline graph.
 - Use CRAM files as input for the pulldown metrics autoqc job.

release 60.1.0
  - GBS - block tag 0 from GBS pipeline and extra tests.
  - Update docs for samplesheet generation
  - Function graph for a reduced Heron pipeline

release 60.0.0

 - When HiC library type detected in seq_alignment, set appropriate flag values
   for bwa mem alignment.

 - Change seq_alignment to observe gbs pipeline allowed or not in product 
   release study config.

 - Configure status change jobs to optionally save statuses to a database.
   Use an updated script name in the job - npg_status_save.
   Saving to the database is disabled when either the 'local' or
   'no_db_status_update' attributes are set to true. The description of the new
   option appears in help. Using --local option is recommended in SOP when
   testing the pipeline, which will automatically prevent the new version of
   the job from saving statuses to the database. --local flag ensures that the